devops-platform/platform/gitlab/gitlab.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      securityContext:
        fsGroup: 999

      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:17.10.1-ce.0

          ports:
            - containerPort: 80
            - containerPort: 22

          resources:
            requests:
              memory: "4Gi"
              cpu: "1000m"
            limits:
              memory: "16Gi"

          volumeMounts:
            - name: gitlab-data
              mountPath: /var/opt/gitlab
              subPath: data

            - name: gitlab-data
              mountPath: /etc/gitlab
              subPath: config

            - name: gitlab-data
              mountPath: /var/log/gitlab
              subPath: logs

            - name: dshm
              mountPath: /dev/shm

      volumes:
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-pvc

        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: "2Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-nodeport
  namespace: cicd
spec:
  type: ClusterIP
  selector:
    app: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80

    - name: ssh
      port: 22
      targetPort: 22
