devops-platform/platform/gitlab/gitlab-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: cicd
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: gitlab.skncvo.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-nodeport
                port:
                  number: 80
